maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: not found: value l
  if (y<l-1 && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999))
        ^ShortestPathMaze:25: error: not found: value h
  if (x<h-1 &&!aMurOuest(x+1,y)&& getIndication(x+1,y)==9999)
        ^